Apply suggestions of Tim and Niels in PR. And improve code base in general (Java 17 constructs); close stream